@@ -57,6 +57,18 @@ ADD_MENU_TEXT_ITEM("FX - Raindrops",        __A_FX,            "raindrops")
 ADD_MENU_TEXT_ITEM("FX - Waves",            __A_FX,            "waves")
 END_MENU
 
+BEGIN_NEW_MENU("MAINT_SUBMENU", "ROOT")
+ADD_MENU_TITLE("Enlightenment Maintinence")
+ADD_MENU_TEXT_ITEM("Purge config file cache",               __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_clean config")
+ADD_MENU_TEXT_ITEM("Purge pager background cache",          __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_clean pager")
+ADD_MENU_TEXT_ITEM("Purge background selector cache",       __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_clean bgsel")
+ADD_MENU_TEXT_ITEM("Purge all caches",                      __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_clean all")
+ADD_MENU_TEXT_ITEM("Query config file cache usage",         __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_query config")
+ADD_MENU_TEXT_ITEM("Query pager background cache usage",    __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_query pager")
+ADD_MENU_TEXT_ITEM("Query bckground selector cache usage",  __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_query bgsel")
+ADD_MENU_TEXT_ITEM("Query all cache usage",                 __A_EXEC, ENLIGHTENMENT_BIN"/e_cache_query all")
+END_MENU
+
 /* dont need this anymore - will have a scritp soon to do it all 
 BEGIN_NEW_GNOME_MENU("GNOME_SUBMENU", "ROOT", "/usr/share/gnome/apps")
 ADD_MENU_TITLE("Gnome Apps")
@@ -97,6 +109,7 @@ ADD_MENU_SUBMENU_TEXT_ITEM("User Menus",      "APPS_SUBMENU")
 ADD_MENU_SUBMENU_TEXT_ITEM("Desktop",         "DESKTOP_SUBMENU")
 ADD_MENU_SUBMENU_TEXT_ITEM("Settings",        "CONFIG_SUBMENU")
 ADD_MENU_SUBMENU_TEXT_ITEM("Themes",          "THEMES_SUBMENU")
+ADD_MENU_SUBMENU_TEXT_ITEM("Maintinence",     "MAINT_SUBMENU")
 ADD_MENU_TEXT_ITEM("About Enlightenment",  __A_ABOUT, "")
 ADD_MENU_TEXT_ITEM("Help",                 __A_EXEC, ENLIGHTENMENT_BIN"/dox" $EROOT"/E-docs")
 ADD_MENU_TEXT_ITEM("About this theme",     __A_EXEC, ENLIGHTENMENT_BIN"/dox" $ETHEME"/ABOUT")
