@@ -2637,3 +2637,10 @@ Fri Oct  1 11:09:35 PDT 1999
 (Raster)
 
 patch for label in settings dialog
+
+-------------------------------------------------------------------------------
+
+Fri Oct  1 12:10:25 PDT 1999
+(Raster)
+
+new mantinence submenu form deksktop menu
